--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,19 +12,17 @@
 <ul class="menu-links">
     <li class="nav-link">
 
-        <a th:href="@{/createListEvaluation}">Créer ou voir la liste des evaluations</a>
+        <a th:href="@{/createEvaluation}">Créer ou voir la liste des evaluations</a>
     </li >
     <li class="nav-link">
         <a th:href="@{/soumettreEvaluation}" class="link">Soumettre une Evaluation</a>
     </li >
-    <li class="nav-link">
-        <a th:href="@{/historyEvolution}" class="link">historique des Evaluations</a>
-    </li >
+
     <li class="nav-link">
         <a th:href="@{/moyenneCritere}" class="link">moyenne des critères</a>
     </li >
     <li class="nav-link">
-        <a th:href="@{/todoList}" class="link">Liste</a>
+        <a th:href="@{/evaluations}" class="link">Liste</a>
     </li >
 
 </ul >
