--- a/src/main/resources/templates/createListEvaluation.html
+++ b/src/main/resources/templates/createListEvaluation.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <h1>Créer ou voir la liste des evaluations</h1>
-<a th:href="@{/addTodo}" class="link">Créer</a>
-<a th:href="@{/todoList}" class="link">Liste </a>
+<a th:href="@{/createEvaluation}" class="link">Créer</a>
+<a th:href="@{/evaluations}" class="link">Liste </a>
 <a th:href="@{/}">Revenir à la page d'acceuil</a>
 <br/><br/>
 
